# VKSender

./: .gitignore  CMakeLists.txt  VKSender.pro  fetcher.cpp  fetcher.h  grouptableedit.cpp  grouptableedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  repository.cpp  repository.h  sendingprogress.cpp  sendingprogress.h  sendingprogress.ui  types.h
install/: CMakeLists.txt
resource/: res.qrc
src/: CMakeLists.txt  errorgroupitem.cpp  errorgroupitem.h  errorgroupitem.ui  fetcher.cpp  fetcher.h  finishedlistwidgetitem.cpp  finishedlistwidgetitem.h  finishedlistwidgetitem.ui  finishedlistwidgetitemedit.cpp  finishedlistwidgetitemedit.h  finishedlistwidgetitemedit.ui  finishedwidget.cpp  finishedwidget.h  finishedwidget.ui  greetingwidget.cpp  greetingwidget.h  greetingwidget.ui  grouplistview.cpp  grouplistview.h  grouptableedit.cpp  grouptableedit.h  grouptableedit.ui  launchedlistwidgetitem.cpp  launchedlistwidgetitem.h  launchedlistwidgetitem.ui  launchedwidget.cpp  launchedwidget.h  launchedwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  noerrorgroupitem.cpp  noerrorgroupitem.h  noerrorgroupitem.ui  repository.cpp  repository.h  sendingprogress.cpp  sendingprogress.ui  (+14 more)
src/resource/: res.qrc
